# json-schema

./: pyproject.toml
tests/: test_all_of.py  test_basics.py  test_fastjsonschema_ref_resolver.py  test_jsonschema.py  test_jsonschema_ref_resolver.py  test_property_order.py
tests/schema/: base.json  derived.json  instance_allof.yaml  schema_allof.yaml  wrong.json
tests/schema/nested/: base.json
