[tool.poetry]
name = "json-schema"
version = "0.1.0"
description = ""
authors = ["Gerrit Schrader <gerrit.schrader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^3.2.0"
fastjsonschema = "^2.14.5"
"ruamel.yaml" = "^0.16.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
